🐛 Fix dice not falling: add body to physics world on spawn

--- a/index.html
+++ b/index.html
@@ -986,6 +986,7 @@
           );
 
           scene.add(die.mesh);
+          world.addBody(die.body);
           activeDice.push(die);
           idx++;
         }
