--- a/index.html
+++ b/index.html
@@ -479,8 +479,8 @@
     renderer.toneMappingExposure = 1.0;
 
     const scene = new THREE.Scene();
-    scene.background = new THREE.Color(0x1a1a2e);
-    scene.fog = new THREE.Fog(0x1a1a2e, 25, 45);
+    scene.background = new THREE.Color(0x2a2a3e);
+    scene.fog = new THREE.Fog(0x2a2a3e, 25, 45);
 
     const camera = new THREE.PerspectiveCamera(40, 1, 0.1, 100);
     camera.position.set(0, 14, 11);
@@ -503,9 +503,9 @@
     controls.target.set(0, 0.3, 0);
 
     // ---- Lights ----
-    scene.add(new THREE.AmbientLight(0x404060, 0.5));
+    scene.add(new THREE.AmbientLight(0x8090b0, 1.2));
 
-    const dirLight = new THREE.DirectionalLight(0xfff5e0, 1.3);
+    const dirLight = new THREE.DirectionalLight(0xfff5e0, 1.8);
     dirLight.position.set(5, 15, 8);
     dirLight.castShadow = true;
     dirLight.shadow.mapSize.set(1024, 1024);
@@ -526,8 +526,8 @@
     const WALL_H = 1.5;
     const WALL_T = 0.35;
 
-    const trayMat = new THREE.MeshStandardMaterial({ color: 0x1e0f2e, roughness: 0.95, metalness: 0 });
-    const wallMat = new THREE.MeshStandardMaterial({ color: 0x3d2252, roughness: 0.6, metalness: 0.1 });
+    const trayMat = new THREE.MeshStandardMaterial({ color: 0x3a5a3a, roughness: 0.85, metalness: 0 });
+    const wallMat = new THREE.MeshStandardMaterial({ color: 0x5c3a1e, roughness: 0.6, metalness: 0.1 });
 
     // Floor
     const floor = new THREE.Mesh(new THREE.BoxGeometry(TRAY * 2, 0.3, TRAY * 2), trayMat);
