--- a/index.html
+++ b/index.html
@@ -554,13 +554,13 @@
     // ============================================================
     const world = new CANNON.World({ gravity: new CANNON.Vec3(0, -35, 0) });
     world.broadphase = new CANNON.NaiveBroadphase();
-    world.solver.iterations = 15;
+    world.solver.iterations = 30;
     world.defaultContactMaterial.friction = 0.35;
     world.defaultContactMaterial.restitution = 0.25;
 
-    // Static bodies
-    const groundBody = new CANNON.Body({ type: CANNON.Body.STATIC, shape: new CANNON.Box(new CANNON.Vec3(TRAY, 0.15, TRAY)) });
-    groundBody.position.y = -0.15;
+    // Static bodies — thick ground to prevent tunneling
+    const groundBody = new CANNON.Body({ type: CANNON.Body.STATIC, shape: new CANNON.Box(new CANNON.Vec3(TRAY, 2, TRAY)) });
+    groundBody.position.y = -2;
     world.addBody(groundBody);
 
     function addWallBody(hx, hy, hz, x, y, z) {
