--- a/index.html
+++ b/index.html
@@ -859,40 +859,10 @@
       mesh.castShadow = true;
       mesh.receiveShadow = true;
 
-      // Use ConvexPolyhedron for D10 too
-      let d10shape;
-      try {
-        const pos = geo.getAttribute('position');
-        const seen = new Map();
-        const uniqueVerts = [];
-        const vertMap = [];
-        for (let i = 0; i < pos.count; i++) {
-          const key = `${pos.getX(i).toFixed(4)},${pos.getY(i).toFixed(4)},${pos.getZ(i).toFixed(4)}`;
-          if (!seen.has(key)) {
-            seen.set(key, uniqueVerts.length);
-            uniqueVerts.push(new CANNON.Vec3(pos.getX(i), pos.getY(i), pos.getZ(i)));
-          }
-          vertMap.push(seen.get(key));
-        }
-        const faces = [];
-        const idx2 = geo.getIndex();
-        if (idx2) {
-          for (let i = 0; i < idx2.count; i += 3) {
-            faces.push([vertMap[idx2.getX(i)], vertMap[idx2.getX(i+1)], vertMap[idx2.getX(i+2)]]);
-          }
-        } else {
-          for (let i = 0; i < vertMap.length; i += 3) {
-            faces.push([vertMap[i], vertMap[i+1], vertMap[i+2]]);
-          }
-        }
-        d10shape = new CANNON.ConvexPolyhedron({ vertices: uniqueVerts, faces });
-      } catch (e) {
-        d10shape = new CANNON.Sphere(0.5 * s);
-      }
-
+      // D10 LatheGeometry doesn't convert well to ConvexPolyhedron — use Sphere
       const body = new CANNON.Body({
         mass: 1,
-        shape: d10shape,
+        shape: new CANNON.Sphere(0.45 * s),
         linearDamping: 0.22,
         angularDamping: 0.22,
       });
